[package]
name = "hello-component"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }

[lints]
workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:hello-component"

[package.metadata.component.target]
path = "../../wit/flint/host"
world = "edge-function"

[package.metadata.component.target.dependencies]
"wasi:http" = { version = "0.2.12" }
